# mx-sdk-rs

./: .claude.md  .dockerignore  .gitignore  .typos.toml  CHANGELOG.md  Cargo.toml  Makefile  README.md  _typos.toml  abi.sh  adder-nopanic.twiggy  adder-old.twiggy  adder-u.twiggy  arwen.sh  benchmarks.sh  build-wasm.sh  clean-wasm.sh  coverage.sh  docker-compose.yml  example-build-no-erdpy.sh  example-build-no-mxpy.sh  hack.sh  investigate-wasm.sh  mandos-fmt.sh  mandos-go.sh  meta-run-all.sh  out.md  publish.sh  quick.sh  remove-outputs.sh  rename-mandos.sh  reported.md  run-scenarios-go.sh  rust-toolchain.toml  rustfmt.toml  sample_adder_auto_inherit.rs0  script.sh  sheet.sh  sheet.txt  sizes copy.sh  (+17 more)
chain/core/: Cargo.toml  README.md
chain/vm/: Cargo.toml  README.md
chain/wasmer-prod/: Cargo.toml
contracts/modules/: Cargo.toml  README.md
data/abi/: Cargo.toml  README.md
data/abi-derive/: Cargo.toml  README.md
data/abi-derive-common/: Cargo.toml  README.md
data/codec/: Cargo.toml
data/codec-derive/: Cargo.toml  README.md
data/human-readable/: Cargo.toml
elrond-codec/: Cargo.toml  README.md
elrond-codec-derive/: Cargo.toml  README.md  expanded.rs
elrond-codec-derive/src/: lib.rs  nested_de_derive.rs  nested_en_derive.rs  top_de_derive.rs  top_en_derive.rs  util.rs
elrond-codec-derive/tests/: enum_derive_test.rs  struct_derive_test.rs  struct_unnamed_fields_test.rs  struct_with_generic_test.rs  tuple_struct_derive_test.rs
elrond-codec/elrond-codec-derive/: Cargo.toml
elrond-codec/src/: codec_de.rs  codec_err.rs  codec_err_handler.rs  codec_ser.rs  default_traits.rs  impl_array.rs  impl_decode_num_unsigned.rs  impl_encode_num_unsigned.rs  impl_tuple.rs  lib.rs  nested_de.rs  nested_de_input.rs  nested_de_input_owned.rs  nested_de_input_slice.rs  nested_ser.rs  nested_ser_output.rs  num_conv.rs  output.rs  test_util.rs  top_de.rs  top_de_input.rs  top_ser.rs  top_ser_output.rs  transmute.rs  try_static_cast.rs
elrond-codec/tests/: derive_empty_struct_test.rs  derive_enum_or_default_test.rs  derive_enum_test.rs  derive_enum_tricky_defaults_fieldless_test.rs  derive_enum_tricky_defaults_test.rs  derive_hygiene.rs  derive_struct_or_default_generic_test.rs  derive_struct_or_default_test.rs  derive_struct_test.rs  derive_struct_with_generic_test.rs  derive_tuple_struct_test.rs  empty_struct_derive_test.rs  enum_derive_test.rs  enum_or_default_derive_test.rs  enum_tricky_defaults_derive_fieldless_test.rs  enum_tricky_defaults_derive_test.rs  explicit_impl_enum.rs  explicit_impl_struct.rs  explicit_impl_wrapped_array.rs  interference_test.rs  shadowing_test.rs  struct_derive_test.rs  struct_or_default_derive_test.rs  struct_or_default_generic_derive_test.rs  struct_with_generic_derive_test.rs  tuple_struct_derive_test.rs
elrond-human-readable/: Cargo.toml
elrond-human-readable/src/: interpret.rs  lib.rs
elrond-human-readable/tests/: single_value_basic_test.rs
elrond-interaction/: Cargo.toml  README.md
elrond-interaction/src/: interactor.rs  interactor_result.rs  interactor_retrieve.rs  interactor_sc_call.rs  interactor_sc_deploy.rs  interactor_sender.rs  interactor_vm_query.rs  lib.rs  scr_decode.rs
elrond-wasm/: Cargo.toml  README.md
elrond-wasm-debug/: Cargo.toml
elrond-wasm-debug/src/: arwen_mandos_runner.rs  async_data.rs  bech32.rs  big_int_mock.rs  big_uint_mock.rs  blockchain_mock.rs  builtin_func_exec.rs  contract_map.rs  debug_api.rs  display_util.rs  execute_mandos.rs  ext_mock.rs  lib.rs  managed_test_util.rs  mandos_go_runner.rs  mandos_rs_runner.rs  mock_error.rs  test_util.rs  tx_context.rs  tx_input.rs  tx_log.rs  tx_managed_types.rs  tx_output.rs
elrond-wasm-debug/tests/: big_int_codec_test.rs  derive_managed_vec_item_1_test.rs  derive_managed_vec_item_2_test.rs  derive_managed_vec_item_biguint_test.rs  derive_managed_vec_item_esdt_token_payment.rs  derive_managed_vec_item_esdt_token_payment_test.rs  derive_managed_vec_item_numbers_test.rs  derive_managed_vec_item_simple_enum.rs  derive_managed_vec_item_struct_1_test.rs  derive_managed_vec_item_struct_2_test.rs  esdt_token_payment_test.rs  framework_mandos_test.rs  hex_call_data_arg_load.rs  managed_codec_test.rs  managed_option_test.rs  managed_ref_test.rs  managed_token_identifier_test.rs  managed_type_debug_test.rs  managed_vec_test.rs  multi_contract_serialize.rs  multi_contract_serialize_test.rs  multi_contract_test.rs  multi_value_encoded_test.rs  path_test.rs  sample_adder.rs  static_buffer_ref_test.rs  test_crypto.rs  test_hash_bi_di_mapper.rs  test_hash_map_mapper.rs  test_hash_map_storage_mapper.rs  test_hash_set_mapper.rs  test_hash_unordered_set_mapper.rs  test_linked_list_mapper.rs  test_print_api.rs  test_queue_mapper.rs  test_vec_mapper.rs  token_identifier_test.rs
elrond-wasm-derive/: Cargo.toml
elrond-wasm-derive/src/: abi_derive.rs  abi_gen.rs  arg_def.rs  arg_extract.rs  arg_regular.rs  arg_str_deserialize.rs  arg_str_serialize.rs  callable.rs  callable_gen.rs  contract.rs  contract_gen.rs  contract_gen_arg.rs  contract_gen_callback.rs  contract_gen_event.rs  contract_gen_finish.rs  contract_gen_method.rs  contract_gen_module.rs  contract_gen_payable.rs  contract_gen_storage.rs  contract_impl.rs  contract_macro_main.rs  contract_macro_module.rs  formatted_error_message.rs  function_selector.rs  gen_arg.rs  gen_event.rs  gen_finish.rs  gen_payable.rs  lib.rs  macro_contract.rs  macro_module.rs  macro_proxy.rs  managed_vec_item_derive.rs  parse_attr.rs  preprocessing.rs  reserved.rs  snippets.rs  type_abi_derive.rs  util.rs  utils.rs
elrond-wasm-modules/: Cargo.toml  README.md
elrond-wasm-modules/src/: default_issue_callbacks.rs  dns.rs  esdt.rs  features.rs  lib.rs  ongoing_operation.rs  only_admin.rs  pause.rs  staking.rs  token_merge.rs  transfer_role_proxy.rs  users.rs
elrond-wasm-node/: Cargo.toml  README.md
elrond-wasm-output/: Cargo.toml
elrond-wasm-serde/: Cargo.toml  README.md
mandos/: .gitignore  Cargo.toml  README.md  example.scen.json  example_normalized.scen.json
vm/: Cargo.toml
vm-core/: Cargo.toml  README.md
vm/src/: lib.rs  (+11 more)
(+9244 files in other folders)
