[workspace]
members = [
  "elrond-wasm",
  "elrond-wasm-debug",
  "elrond-wasm-derive",
  "mandos",
  "elrond-codec",
  "elrond-codec-derive",

  "contracts/benchmarks/mappers/benchmark-common",
  "contracts/benchmarks/mappers/linked-list-repeat",
  "contracts/benchmarks/mappers/linked-list-repeat/meta",
  "contracts/benchmarks/mappers/map-repeat",
  "contracts/benchmarks/mappers/map-repeat/meta",
  "contracts/benchmarks/mappers/queue-repeat",
  "contracts/benchmarks/mappers/queue-repeat/meta",
  "contracts/benchmarks/mappers/set-repeat",
  "contracts/benchmarks/mappers/set-repeat/meta",
  "contracts/benchmarks/mappers/single-value-repeat",
  "contracts/benchmarks/mappers/single-value-repeat/meta",
  "contracts/benchmarks/mappers/vec-repeat",
  "contracts/benchmarks/mappers/vec-repeat/meta",
  "contracts/benchmarks/str-repeat",
  "contracts/benchmarks/str-repeat/meta",
  "contracts/benchmarks/send-tx-repeat",
  "contracts/benchmarks/send-tx-repeat/meta",

  "contracts/examples/adder",
  "contracts/examples/adder/meta",
  "contracts/examples/bonding-curve-contract",
  "contracts/examples/bonding-curve-contract/meta",
  "contracts/examples/crowdfunding-erc20",
  "contracts/examples/crowdfunding-erc20/meta",
  "contracts/examples/crowdfunding-esdt",
  "contracts/examples/crowdfunding-esdt/meta",
  "contracts/examples/crypto-bubbles",
  "contracts/examples/crypto-bubbles/meta",
  "contracts/examples/crypto-kitties/kitty-ownership",
  "contracts/examples/crypto-kitties/kitty-ownership/meta",
  "contracts/examples/crypto-kitties/kitty-genetic-alg",
  "contracts/examples/crypto-kitties/kitty-genetic-alg/meta",
  "contracts/examples/crypto-kitties/kitty-auction",
  "contracts/examples/crypto-kitties/kitty-auction/meta",
  "contracts/examples/egld-esdt-swap",
  "contracts/examples/egld-esdt-swap/meta",
  "contracts/examples/erc20",
  "contracts/examples/erc20/meta",
  "contracts/examples/erc721",
  "contracts/examples/erc721/meta",
  "contracts/examples/erc1155",
  "contracts/examples/erc1155/meta",
  "contracts/examples/erc1155-marketplace",
  "contracts/examples/erc1155-marketplace/meta",
  "contracts/examples/erc1155-user-mock",
  "contracts/examples/erc1155-user-mock/meta",
  "contracts/examples/factorial",
  "contracts/examples/factorial/meta",
  "contracts/examples/lottery-erc20",
  "contracts/examples/lottery-erc20/meta",
  "contracts/examples/lottery-esdt",
  "contracts/examples/lottery-esdt/meta",
  "contracts/examples/multisig",
  "contracts/examples/multisig/meta",
  "contracts/examples/nft-minter",
  "contracts/examples/nft-minter/meta",
  "contracts/examples/nft-storage-prepay",
  "contracts/examples/nft-storage-prepay/meta",
  "contracts/examples/order-book/factory",
  "contracts/examples/order-book/factory/meta",
  "contracts/examples/order-book/pair",
  "contracts/examples/order-book/pair/meta",
  "contracts/examples/ping-pong-egld",
  "contracts/examples/ping-pong-egld/meta",

  "contracts/feature-tests/abi-tester",
  "contracts/feature-tests/abi-tester/meta",
  "contracts/feature-tests/basic-features",
  "contracts/feature-tests/basic-features/meta",
  "contracts/feature-tests/composability",
  "contracts/feature-tests/composability/esdt-contract-pair",
  "contracts/feature-tests/composability/esdt-contract-pair/first-contract",
  "contracts/feature-tests/composability/esdt-contract-pair/first-contract/meta",
  "contracts/feature-tests/composability/esdt-contract-pair/second-contract",
  "contracts/feature-tests/composability/esdt-contract-pair/second-contract/meta",
  "contracts/feature-tests/composability/execute-on-dest-esdt-issue-callback/parent",
  "contracts/feature-tests/composability/execute-on-dest-esdt-issue-callback/parent/meta",
  "contracts/feature-tests/composability/execute-on-dest-esdt-issue-callback/child",
  "contracts/feature-tests/composability/execute-on-dest-esdt-issue-callback/child/meta",
  "contracts/feature-tests/composability/forwarder",
  "contracts/feature-tests/composability/forwarder/meta",
  "contracts/feature-tests/composability/forwarder-raw",
  "contracts/feature-tests/composability/forwarder-raw/meta",
  "contracts/feature-tests/composability/local-esdt-and-nft",
  "contracts/feature-tests/composability/local-esdt-and-nft/meta",
  "contracts/feature-tests/composability/proxy-test-first",
  "contracts/feature-tests/composability/proxy-test-first/meta",
  "contracts/feature-tests/composability/proxy-test-second",
  "contracts/feature-tests/composability/proxy-test-second/meta",
  "contracts/feature-tests/composability/recursive-caller",
  "contracts/feature-tests/composability/recursive-caller/meta",
  "contracts/feature-tests/composability/vault",
  "contracts/feature-tests/composability/vault/meta",
  "contracts/feature-tests/panic-message-features",
  "contracts/feature-tests/panic-message-features/meta",
  "contracts/feature-tests/payable-features",
  "contracts/feature-tests/payable-features/meta",
  "contracts/feature-tests/use-module",
  "contracts/feature-tests/use-module/meta",

  "contracts/modules/elrond-wasm-module-bonding-curve",
  "contracts/modules/elrond-wasm-module-dns",
  "contracts/modules/elrond-wasm-module-esdt",
  "contracts/modules/elrond-wasm-module-features",
  "contracts/modules/elrond-wasm-module-governance",
  "contracts/modules/elrond-wasm-module-pause",
  "contracts/modules/elrond-wasm-module-users",

  "tools/test-gen",
]

exclude = [
  "elrond-wasm-node",
  "elrond-wasm-output",
]
