[workspace]
resolver = "2"

members = [
  "data/codec",
  "data/codec-derive",

  "framework/base",
  "framework/derive",
  "framework/meta",
  "framework/scenario",
  "framework/snippets",
  "framework/wasm-adapter",

  "sdk/core",
  "sdk/scenario-format",

  "tools/mxpy-snippet-generator",

  "vm",

  "contracts/modules",

  "contracts/core/price-aggregator",
  "contracts/core/price-aggregator/meta",
  "contracts/core/wegld-swap",
  "contracts/core/wegld-swap/meta",

  "contracts/benchmarks/mappers/benchmark-common",
  "contracts/benchmarks/mappers/linked-list-repeat",
  "contracts/benchmarks/mappers/linked-list-repeat/meta",
  "contracts/benchmarks/mappers/map-repeat",
  "contracts/benchmarks/mappers/map-repeat/meta",
  "contracts/benchmarks/mappers/queue-repeat",
  "contracts/benchmarks/mappers/queue-repeat/meta",
  "contracts/benchmarks/mappers/set-repeat",
  "contracts/benchmarks/mappers/set-repeat/meta",
  "contracts/benchmarks/mappers/single-value-repeat",
  "contracts/benchmarks/mappers/single-value-repeat/meta",
  "contracts/benchmarks/mappers/vec-repeat",
  "contracts/benchmarks/mappers/vec-repeat/meta",
  "contracts/benchmarks/large-storage",
  "contracts/benchmarks/large-storage/meta",
  "contracts/benchmarks/str-repeat",
  "contracts/benchmarks/str-repeat/meta",
  "contracts/benchmarks/send-tx-repeat",
  "contracts/benchmarks/send-tx-repeat/meta",

  "contracts/examples/adder",
  "contracts/examples/adder/meta",
  "contracts/examples/adder/interact",
  "contracts/examples/esdt-transfer-with-fee",
  "contracts/examples/esdt-transfer-with-fee/meta",
  "contracts/examples/bonding-curve-contract",
  "contracts/examples/bonding-curve-contract/meta",
  "contracts/examples/crowdfunding-esdt",
  "contracts/examples/crowdfunding-esdt/meta",
  "contracts/examples/crypto-bubbles",
  "contracts/examples/crypto-bubbles/meta",
  "contracts/examples/crypto-zombies",
  "contracts/examples/crypto-zombies/meta",
  "contracts/examples/check-pause",
  "contracts/examples/check-pause/meta",
  "contracts/examples/crypto-kitties/kitty-ownership",
  "contracts/examples/crypto-kitties/kitty-ownership/meta",
  "contracts/examples/crypto-kitties/kitty-genetic-alg",
  "contracts/examples/crypto-kitties/kitty-genetic-alg/meta",
  "contracts/examples/crypto-kitties/kitty-auction",
  "contracts/examples/crypto-kitties/kitty-auction/meta",
  "contracts/examples/digital-cash",
  "contracts/examples/digital-cash/meta",
  "contracts/examples/empty",
  "contracts/examples/empty/meta",
  "contracts/examples/factorial",
  "contracts/examples/factorial/meta",
  "contracts/examples/fractional-nfts",
  "contracts/examples/fractional-nfts/meta",
  "contracts/examples/lottery-esdt",
  "contracts/examples/lottery-esdt/meta",
  "contracts/examples/multisig",
  "contracts/examples/multisig/meta",
  "contracts/examples/multisig/interact",
  "contracts/examples/nft-minter",
  "contracts/examples/nft-minter/meta",
  "contracts/examples/nft-storage-prepay",
  "contracts/examples/nft-storage-prepay/meta",
  "contracts/examples/order-book/factory",
  "contracts/examples/order-book/factory/meta",
  "contracts/examples/order-book/pair",
  "contracts/examples/order-book/pair/meta",
  "contracts/examples/proxy-pause",
  "contracts/examples/proxy-pause/meta",
  "contracts/examples/ping-pong-egld",
  "contracts/examples/ping-pong-egld/meta",
  "contracts/examples/rewards-distribution",
  "contracts/examples/rewards-distribution/meta",
  "contracts/examples/seed-nft-minter",
  "contracts/examples/seed-nft-minter/meta",
  "contracts/examples/token-release",
  "contracts/examples/token-release/meta",

  "contracts/feature-tests/abi-tester",
  "contracts/feature-tests/abi-tester/meta",
  "contracts/feature-tests/alloc-features",
  "contracts/feature-tests/alloc-features/meta",
  "contracts/feature-tests/basic-features",
  "contracts/feature-tests/basic-features/meta",
  "contracts/feature-tests/basic-features/interact",
  "contracts/feature-tests/big-float-features",
  "contracts/feature-tests/big-float-features/meta",
  "contracts/feature-tests/composability",
  "contracts/feature-tests/composability/interact",
  "contracts/feature-tests/composability/builtin-func-features",
  "contracts/feature-tests/composability/builtin-func-features/meta",
  "contracts/feature-tests/composability/esdt-contract-pair",
  "contracts/feature-tests/composability/esdt-contract-pair/first-contract",
  "contracts/feature-tests/composability/esdt-contract-pair/first-contract/meta",
  "contracts/feature-tests/composability/esdt-contract-pair/second-contract",
  "contracts/feature-tests/composability/esdt-contract-pair/second-contract/meta",
  "contracts/feature-tests/composability/execute-on-dest-esdt-issue-callback/parent",
  "contracts/feature-tests/composability/execute-on-dest-esdt-issue-callback/parent/meta",
  "contracts/feature-tests/composability/execute-on-dest-esdt-issue-callback/child",
  "contracts/feature-tests/composability/execute-on-dest-esdt-issue-callback/child/meta",
  "contracts/feature-tests/composability/forwarder",
  "contracts/feature-tests/composability/forwarder/meta",
  "contracts/feature-tests/composability/forwarder-queue",
  "contracts/feature-tests/composability/forwarder-queue/meta",
  "contracts/feature-tests/composability/forwarder-raw",
  "contracts/feature-tests/composability/forwarder-raw/meta",
  "contracts/feature-tests/composability/local-esdt-and-nft",
  "contracts/feature-tests/composability/local-esdt-and-nft/meta",
  "contracts/feature-tests/composability/promises-features",
  "contracts/feature-tests/composability/promises-features/meta",
  "contracts/feature-tests/composability/proxy-test-first",
  "contracts/feature-tests/composability/proxy-test-first/meta",
  "contracts/feature-tests/composability/proxy-test-second",
  "contracts/feature-tests/composability/proxy-test-second/meta",
  "contracts/feature-tests/composability/recursive-caller",
  "contracts/feature-tests/composability/recursive-caller/meta",
  "contracts/feature-tests/composability/transfer-role-features",
  "contracts/feature-tests/composability/transfer-role-features/meta",
  "contracts/feature-tests/composability/vault",
  "contracts/feature-tests/composability/vault/meta",
  "contracts/feature-tests/erc-style-contracts/crowdfunding-erc20",
  "contracts/feature-tests/erc-style-contracts/crowdfunding-erc20/meta",
  "contracts/feature-tests/erc-style-contracts/erc20",
  "contracts/feature-tests/erc-style-contracts/erc20/meta",
  "contracts/feature-tests/erc-style-contracts/erc721",
  "contracts/feature-tests/erc-style-contracts/erc721/meta",
  "contracts/feature-tests/erc-style-contracts/erc1155",
  "contracts/feature-tests/erc-style-contracts/erc1155/meta",
  "contracts/feature-tests/erc-style-contracts/erc1155-marketplace",
  "contracts/feature-tests/erc-style-contracts/erc1155-marketplace/meta",
  "contracts/feature-tests/erc-style-contracts/erc1155-user-mock",
  "contracts/feature-tests/erc-style-contracts/erc1155-user-mock/meta",
  "contracts/feature-tests/erc-style-contracts/lottery-erc20",
  "contracts/feature-tests/erc-style-contracts/lottery-erc20/meta",
  "contracts/feature-tests/esdt-system-sc-mock",
  "contracts/feature-tests/esdt-system-sc-mock/meta",
  "contracts/feature-tests/formatted-message-features",
  "contracts/feature-tests/formatted-message-features/meta",
  "contracts/feature-tests/managed-map-features",
  "contracts/feature-tests/managed-map-features/meta",
  "contracts/feature-tests/multi-contract-features",
  "contracts/feature-tests/multi-contract-features/meta",
  "contracts/feature-tests/panic-message-features",
  "contracts/feature-tests/panic-message-features/meta",
  "contracts/feature-tests/payable-features",
  "contracts/feature-tests/payable-features/meta",
  "contracts/feature-tests/rust-snippets-generator-test",
  "contracts/feature-tests/rust-snippets-generator-test/meta",
  "contracts/feature-tests/rust-testing-framework-tester",
  "contracts/feature-tests/rust-testing-framework-tester/meta",
  "contracts/feature-tests/use-module",
  "contracts/feature-tests/use-module/meta",
]
