[package]
name = "elrond-interaction"
version = "0.1.0"
edition = "2018"

authors = [
    "Andrei Marinica <andrei.marinica@elrond.com>",
    "Elrond Network <contact@elrond.com>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/ElrondNetwork/elrond-wasm-rs"
homepage = "https://elrond.com/"
documentation = "https://docs.elrond.com/"
description = "Elrond WebAssembly smart contract API debugging mocks and utils"
keywords = ["elrond", "blockchain", "contract", "debug"]
categories = ["cryptography::cryptocurrencies", "development-tools::debugging"]

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
elrond-sdk-erdrs = "0.2.0"
hex = "0.4"
base64 = "0.13.0"
log = "0.4.17"
env_logger = "0.8.4"

[dependencies.elrond-wasm-debug]
version = "=0.33.1"
path = "../elrond-wasm-debug"

