[package]
name = "elrond-wasm-debug"
version = "0.28.0"
edition = "2018"

authors = ["Andrei Marinica <andrei.marinica@elrond.com>", "Elrond Network <contact@elrond.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/ElrondNetwork/elrond-wasm-rs"
homepage = "https://elrond.com/"
documentation = "https://docs.elrond.com/"
description = "Elrond WebAssembly smart contract API debugging mocks and utils"
keywords = ["elrond", "blockchain", "contract", "debug"]
categories = ["cryptography::cryptocurrencies", "development-tools::debugging"]

[dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
sha2 = "0.9.2"
sha3 = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.4"
rand_pcg = "0.2.1"
rand_seeder = "0.2.2"
rustc_version = "0.4"
toml = "0.5.8"
cargo_toml = "0.10.1"
pathdiff = "0.2.1"

[features]
mandos-go-tests = []

[dependencies.elrond-wasm]
version = "=0.28.0"
path = "../elrond-wasm"

[dependencies.mandos]
version = "0.12.0"
path = "../mandos"
