[package]
name = "elrond-wasm-derive"
version = "0.1.0"
authors = ["andrei-marinica <andrei.marinica@elrond.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "0.4"
quote = "0.6.8"
syn = "0.15"

[features]
default = ["syn/full", "syn/parsing", "syn/extra-traits"]

[lib]
name = "elrond_wasm_derive"
proc-macro = true