[package]
name = "elrond-wasm-modules"
version = "0.24.0"
edition = "2018"

authors = ["Elrond Network <contact@elrond.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/ElrondNetwork/elrond-wasm-rs"
homepage = "https://elrond.com/"
documentation = "https://docs.elrond.com/"
description = "Elrond WebAssembly standard smart contract modules"
keywords = ["elrond", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies"]

[dependencies.elrond-wasm]
version = "0.24.0"
path = "../elrond-wasm"

[dev-dependencies.elrond-wasm-debug]
version = "0.24.0"
path = "../elrond-wasm-debug"
