[package]
name = "elrond-wasm-output"
version = "0.7.0"
edition = "2018"

authors = ["Andrei Marinica <andrei.marinica@elrond.com>", "Elrond Network<contact@elrond.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/ElrondNetwork/elrond-wasm-rs"
homepage = "https://elrond.com/"
documentation = "https://docs.elrond.com/"
description = "Elrond WebAssembly panic handler and allocator declaration for the .wasm output"
keywords = ["elrond", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies", "development-tools::ffi"]

[features]
wasm-output-mode = [] # crate functionality can be turned off, but just for running the framework tests

[dependencies]
elrond-wasm-node = { version = "0.7.0", path = "../elrond-wasm-node" }
wee_alloc = "0.4"
