[package]
name = "elrond-wasm"
version = "0.19.0"
edition = "2018"

authors = ["Andrei Marinica <andrei.marinica@elrond.com>", "Elrond Network <contact@elrond.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/ElrondNetwork/elrond-wasm-rs"
homepage = "https://elrond.com/"
documentation = "https://docs.elrond.com/"
description = "Elrond WebAssembly smart contract API"
keywords = ["elrond", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies", "development-tools"]

[features]
derive = ["elrond-wasm-derive"]

[dependencies]
wee_alloc = "0.4"
arrayvec = { version = "0.7.1", default-features = false }
hashbrown = "0.11.2"
hex-literal = "0.3.1"

[dependencies.elrond-wasm-derive]
version = "=0.19.0"
path = "../elrond-wasm-derive"
optional = true

[dependencies.elrond-codec]
version = "0.6.0"
path = "../elrond-codec"
features = ["derive"]
