[package]
name = "elrond-wasm"
version = "0.38.0"
edition = "2021"

authors = ["Andrei Marinica <andrei.marinica@elrond.com>", "Elrond Network <contact@elrond.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/ElrondNetwork/elrond-wasm-rs"
homepage = "https://elrond.com/"
documentation = "https://docs.elrond.com/"
description = "Elrond WebAssembly smart contract API"
keywords = ["elrond", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies", "development-tools"]

[features]
num-bigint = ["elrond-codec/num-bigint"]
alloc = ["elrond-codec/alloc"]
ei-unmanaged = ["alloc"]
promises = []
big-float = []
esdt-token-payment-legacy-decode = []

[dependencies]
wee_alloc = "0.4"
hashbrown = "0.11.2"
hex-literal = "0.3.1"
bitflags = "1.3.2"

[dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.elrond-wasm-derive]
version = "=0.38.0"
path = "../elrond-wasm-derive"

[dependencies.elrond-codec]
version = "=0.16.0"
path = "../elrond-codec"
features = ["derive"]
