[package]
name = "multiversx-chain-vm-core"
version = "0.10.0"
edition = "2021"

authors = [
    "Andrei Marinica <andrei.marinica@multiversx.com>",
    "MultiversX <contact@multiversx.com>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/multiversx/mx-sdk-rs"
homepage = "https://multiversx.com/"
documentation = "https://docs.multiversx.com/"
description = "MultiversX VM interfaces and base types"
keywords = ["multiversx", "blockchain", "vm", "tools"]
categories = ["cryptography::cryptocurrencies", "development-tools::debugging"]

[dependencies]
bitflags = "=2.6.0"

[dependencies.multiversx-sc-codec]
version = "=0.21.0"
path = "../data/codec"
features = ["derive"]

[dependencies.multiversx-chain-vm-executor]
version = "=0.2.0"
