[package]
name = "multiversx-chain-vm"
version = "0.1.5"
edition = "2021"

authors = [
    "Andrei Marinica <andrei.marinica@multiversx.com>",
    "MultiversX <contact@multiversx.com>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/multiversx/mx-sdk-rs"
homepage = "https://multiversx.com/"
documentation = "https://docs.multiversx.com/"
description = "MultiversX VM implementation and tooling"
keywords = ["multiversx", "blockchain", "vm", "tools"]
categories = ["cryptography::cryptocurrencies", "development-tools::debugging"]

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"
sha2 = "0.10.6"
sha3 = "0.10.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
rand_seeder = "0.2.2"
ed25519-dalek = "1.0.1"
itertools = "0.10.3"
bech32 = "0.9"

[dependencies.multiversx-sc]
version = "=0.39.5"
path = "../framework/base"
features = ["alloc", "num-bigint", "promises", "big-float"]

[dependencies.multiversx-sc-meta]
version = "=0.39.5"
path = "../framework/meta"

[dependencies.multiversx-chain-scenario-format]
version = "0.19.1"
path = "../sdk/scenario-format"

[dev-dependencies.multiversx-sc-meta] # only used in the sample_adder test
version = "=0.39.5"
path = "../framework/meta"
