[package]
name = "multiversx-chain-core"
version = "0.15.0"
edition = "2021"

authors = [
    "Andrei Marinica <andrei.marinica@multiversx.com>",
    "MultiversX <contact@multiversx.com>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/multiversx/mx-sdk-rs"
homepage = "https://multiversx.com/"
documentation = "https://docs.multiversx.com/"
description = "MultiversX chain interfaces, constants, and base types"
keywords = ["multiversx", "blockchain", "vm", "tools"]
categories = ["cryptography::cryptocurrencies", "development-tools::debugging"]

[features]
std = ["bech32", "serde", "hex"]

[dependencies]
bitflags = "2.9"
bech32 = { version = "0.11", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
hex = { version = "0.4", optional = true }

[dependencies.multiversx-sc-codec]
version = "=0.22.1"
path = "../../data/codec"
features = ["derive"]
